[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssbx"
version = "0.0.1"
description = "Python SDK for substrate-sandbox: isolated, stateful execution environments on Agent Substrate"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = []

[project.urls]
Homepage = "https://github.com/rakyll/substrate-sandbox"

[tool.setuptools.packages.find]
where = ["src"]
